--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,12 @@
     <table class="table">
       <thead>
       <tr>
-        <th>Name <div class="sort-arrow"><div class="sort-arrow-up"></div><div class="sort-arrow-down"></div></div></th>
-        <th>Position <div class="sort-arrow"><div class="sort-arrow-up"></div><div class="sort-arrow-down"></div></div></th>
-        <th>Office <div class="sort-arrow"><div class="sort-arrow-up"></div><div class="sort-arrow-down"></div></div></th>
-        <th>Age <div class="sort-arrow"><div class="sort-arrow-up"></div><div class="sort-arrow-down"></div></div></th>
-        <th>Start date <div class="sort-arrow"><div class="sort-arrow-up"></div><div class="sort-arrow-down"></div></div></th>
-        <th>Salary <div class="sort-arrow"><div class="sort-arrow-up"></div><div class="sort-arrow-down"></div></div></th>
+        <th data-type="abc">Name <div class="sort-arrow"><div class="sort-arrow-up"></div><div class="sort-arrow-down"></div></div></th>
+        <th data-type="abc">Position <div class="sort-arrow"><div class="sort-arrow-up"></div><div class="sort-arrow-down"></div></div></th>
+        <th data-type="abc">Office <div class="sort-arrow"><div class="sort-arrow-up"></div><div class="sort-arrow-down"></div></div></th>
+        <th data-type="123">Age <div class="sort-arrow"><div class="sort-arrow-up"></div><div class="sort-arrow-down"></div></div></th>
+        <th data-type="date">Start date <div class="sort-arrow"><div class="sort-arrow-up"></div><div class="sort-arrow-down"></div></div></th>
+        <th data-type="123">Salary <div class="sort-arrow"><div class="sort-arrow-up"></div><div class="sort-arrow-down"></div></div></th>
       </tr>
       </thead>
       <tbody>
