--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <h1>Hello World Hi Hi</h1>
   <div class="wrapper">
     <div class="filter">
-        <span>Search: </span><input type="text" /><button>search</button>
+        <span>Search: </span><input type="text" /><button id="search-btn">search</button>
     </div>
     <table class="table">
       <thead>
@@ -21,7 +21,7 @@
         <th data-type="abc">Office <div class="sort-arrow"><div class="sort-arrow-up"></div><div class="sort-arrow-down"></div></div></th>
         <th data-type="123">Age <div class="sort-arrow"><div class="sort-arrow-up"></div><div class="sort-arrow-down"></div></div></th>
         <th data-type="date">Start date <div class="sort-arrow"><div class="sort-arrow-up"></div><div class="sort-arrow-down"></div></div></th>
-        <th data-type="123">Salary <div class="sort-arrow"><div class="sort-arrow-up"></div><div class="sort-arrow-down"></div></div></th>
+        <th data-type="salary">Salary <div class="sort-arrow"><div class="sort-arrow-up"></div><div class="sort-arrow-down"></div></div></th>
       </tr>
       </thead>
       <tbody>
