--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <h1>Hello World Hi Hi</h1>
   <div class="wrapper">
     <div class="filter">
-        <span>Search: </span><input type="text" /><button id="search-btn">search</button>
+        <span>Search: </span><input type="text" id="filtered-value" /><button id="search-btn">search</button>
     </div>
     <table class="table">
       <thead>
