--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-  <h1>Hello World Hi Hi</h1>
+  <h1>Hello World</h1>
   <div class="wrapper">
-    <div class="filter">
-        <span>Search: </span><input type="text" id="filtered-value" /><button id="search-btn">search</button>
-    </div>
+    <form class="filter" id="filterForm">
+        <span>Search: </span><input type="text" id="filtered-value" /><button id="search-btn" type="submit">search</button>
+    </form>
     <table class="table">
       <thead>
       <tr>
